final final fixed bubble clipping by adding negative margins

--- a/sarasa/sarasa1.css
+++ b/sarasa/sarasa1.css
@@ -521,6 +521,7 @@ body::after{
     overflow: visible;
     z-index: 4;
     background-color: var(--dark);
+    transition: margin .24s ease;
 }
 
 
@@ -636,12 +637,17 @@ body::after{
 
 
 /* 50rem = body max-width, needs to match or be less than */
-@media only screen and (max-width: 48rem) {    
+@media only screen and (max-width: 40rem) {    
     .speech-bubble {
-        margin-bottom: calc(8rem - 5vw);
+        margin-bottom: calc(10rem - 5vw);
+        margin-top: calc(10rem - 5vw);
+
     }
     .speech-bubble:nth-of-type(2n+1) {
-        margin-left: 1rem;
+        margin-left: -.75rem;
+    }
+    .speech-bubble:nth-of-type(2) {
+        margin-right: -.75rem;
     }
 
 }
